<?xml version="1.0" encoding="utf-8"?>
<!-- We ignore all hardcoded values because, they UI will be modified -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kyoto_night"
    tools:context="ch.epfl.sweng.fiktion.views.RegisterActivity"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/fiktionLogo2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/fiktion_app_logo"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fiktion_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="249dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:text="Create account"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="47dp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:drawableEnd="@drawable/person_icon_24"
            android:drawableTint="@color/darkGray"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            tools:ignore="HardcodedText"
            tools:targetApi="m" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:drawableEnd="@drawable/lock_icon_24"
            android:drawableTint="@color/darkGray"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            tools:ignore="HardcodedText"
            tools:targetApi="m" />

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:drawableEnd="@drawable/lock_icon_24"
            android:drawableTint="@color/darkGray"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/confirm_pw"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            tools:ignore="HardcodedText"
            tools:targetApi="m" />

        <Button
            android:id="@+id/register_click"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.05"
            android:background="@color/colorPrimary"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="@color/white"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
