<resources>
    <string name="app_name">Fiktion</string>
    <string name="title_activity_location">Nearby</string>
    <string name="invalid_email_error">Requires a valid email</string>
    <string name="invalid_password_error">Password must be at least 6 characters</string>
    <string name="toast_authentication_failed">Authentication Failed</string>
    <string name="gps_network_not_enabled">GPS location is not enabled.</string>
    <string name="open_location_settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="add_poi_name">ex: Akihabara</string>
    <string name="add_poi_fiction">ex: Steins;Gate</string>
...
